// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly 1`] = `
<header>
  <a
    aria-current="page"
    className=""
    href="/"
    onClick={[Function]}
    onMouseEnter={[Function]}
    style={Object {}}
  >
    azujuuuuuun.github.io
  </a>
</header>
`;

exports[`Header renders isHome prop correctly 1`] = `
<header>
  <h1>
    <a
      aria-current="page"
      className=""
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
      style={Object {}}
    >
      azujuuuuuun.github.io
    </a>
  </h1>
</header>
`;
